Fixed the CSS on the grey bordering box that surrounds search results so that the images don't bleed on to that border.

--- a/app/assets/stylesheets/custom_bootstrap.css.scss
+++ b/app/assets/stylesheets/custom_bootstrap.css.scss
@@ -81,7 +81,6 @@ section h2 {
     line-height: 1.30em;
 }
 
-
 div#search-results{
   border: 10px solid #d4d4d4;
 }
@@ -106,10 +105,15 @@ img.devpic, img.projshow {
   width:100%;
   overflow: hidden;
 }
+
 img.devpic {
   margin:10px;
 }
 
 .btn-custom {
   width: 50%;
+}
+
+.row.row-fluid.search{
+  padding: 0px 20px;
 }
